[tool.poetry]
name = "dobermann"
version = "0.1.0"
description = "Tools for research and deploy trading strategies"
authors = ["Danil Tryapchev <ruthus18@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.25.0"
tortoise-orm = "^0.19.0"
aerich = "^0.6.2"
pydantic = {version = "^1.8.2", extras = ["dotenv"]}
python-binance = "^1.0.15"
numpy = {version = "^1.22.0", python = ">=3.9,<3.11"}
pandas = "^1.4.2"
tqdm = "^4.64.0"
simplejson = "^3.17.5"
colorlog = "^6.6.0"
APScheduler = "^3.9.1"
pyzmq = "^22.3.0"
msgpack = "^1.0.3"
uvloop = "^0.16.0"
altair = "^4.2.0"
httpx = "^0.23.0"
loguru = "^0.6.0"
motor = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
flake8 = "^4.0.1"
isort = "^5.10.1"
jupyterlab = "^3.2.6"
ipdb = "^0.13.9"
poethepoet = "^0.13.1"
pytest-asyncio = "^0.18.3"

[tool.aerich]
tortoise_orm = "dobermann.config.TORTOISE_ORM"
location = "dobermann/migrations"
src_folder = "./."

[tool.poe.tasks]
makemigrations = "aerich migrate"
migrate = "aerich upgrade"

lab = "jupyter lab"
sync = "python -m dobermann sync"

_build_charts = 'npm run build --prefix lightweight_charts'
_run_charts = 'python -m http.server 9999 --bind 127.0.0.1 --directory lightweight_charts/dist'
charts_prod = ['_build_charts', '_run_charts']

charts = 'npm run start --prefix lightweight_charts'

_flake8 = 'flake8 --statistics --show-source .'
_isort = 'isort -c .'
lint = ['_flake8', '_isort']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
