[tool.poetry]
name = "dobermann"
version = "0.2.0"
description = "Tools for research and deploy trading strategies"
authors = ["Danil Tryapchev <ruthus18@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.5.0"
pydantic = "^1.8.2"
numpy = "^1.23.4"
pandas = "^1.4.2"
tqdm = "^4.64.0"
simplejson = "^3.17.5"
uvloop = "^0.17.0"
altair = "^4.2.0"
httpx = "^0.23.0"
loguru = "^0.6.0"
yarl = "^1.8.1"
asyncpg = "^0.27.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
flake8 = "^5.0.4"
isort = "^5.10.1"
jupyterlab = "^3.2.6"
ipdb = "^0.13.9"
poethepoet = "^0.13.1"
pytest-asyncio = "^0.18.3"

[tool.poe.tasks]
_isort_pretty = "isort --overwrite-in-place ."
pretty = ["_isort_pretty"]

_isort_lint = "isort -c ."
_flake8_lint = "flake8 --statistics --show-source ."
lint = ["_isort_lint", "_flake8_lint"]

lab = "jupyter lab"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
