[tool.poetry]
name = "dobermann"
version = "0.2.0"
description = "Tools for research and deploy trading strategies"
authors = ["Danil Tryapchev <ruthus18@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.13.2"
pydantic = "^1.10.8"
numpy = "^1.24.3"
pandas = "^1.5.3"
tqdm = "^4.65.0"
simplejson = "^3.19.1"
uvloop = "^0.17.0"
altair = "^4.2.2"
httpx = "^0.23.3"
loguru = "^0.6.0"
yarl = "^1.9.2"
asyncpg = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^5.0.4"
isort = "^5.12.0"
jupyterlab = "^3.6.3"
ipdb = "^0.13.13"
poethepoet = "^0.13.1"
pytest-asyncio = "^0.18.3"
jupyter-resource-usage = "^0.6.4"
mypy = "^0.990"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks]
_isort_pretty = "isort --overwrite-in-place ."
pretty = ["_isort_pretty"]

_isort_lint = "isort -c ."
_flake8_lint = "flake8 --statistics --show-source ."
_mypy_lint = "mypy ."
lint = ["_isort_lint", "_flake8_lint", "_mypy_lint"]

lab = "jupyter lab"
